--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,6 +10,10 @@ on:
         required: false
         default: ''
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: coldwings/photon-ut-base
+
 jobs:
   ghr_push:
     runs-on: ubuntu-latest
@@ -24,12 +28,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log-in to ghcr.io
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
+      - name: Log in to the Container registry
+        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push container image
         run: |
-          IMAGE_ID=ghcr.io/coldwings/photon-ut-base
+          IMAGE_ID=${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
           # Strip git ref prefix from version
           VERSION=latest
           # Build and Publish container image
