--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,18 +29,15 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry
-        uses: docker/login-action@65b78e6e13532edd9afa3aa52ac7964289d1a9c1
+        uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push container image
-        run: |
-          IMAGE_ID=${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-          # Strip git ref prefix from version
-          VERSION=latest
-          # Build and Publish container image
-          docker buildx build --push \
-          --tag $IMAGE_ID:$VERSION \
-          --platform linux/amd64,linux/arm64 .
+      - name: Build and push image
+        uses:  docker/build-push-action@v5.3.0
+        with:
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}:latest
+          platforms: linux/amd64,linux/arm64
