--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.actor }}/photon-lib-os-ci-base
+  IMAGE_NAME: ${{ github.actor }}/photon-ut-base
 
 jobs:
   ghr_push:
@@ -39,5 +39,7 @@ jobs:
         uses:  docker/build-push-action@v5.3.0
         with:
           push: true
-          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}:${{ github.sha }}
+          tags: |
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}:latest
           platforms: linux/amd64,linux/arm64
