--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,6 @@ jobs:
         with:
           push: true
           tags: |
-            ${{ env.OWNER_LC }}/${{ env.IMAGE_NAME}}:${{ github.sha }}
-            ${{ env.OWNER_LC }}/${{ env.IMAGE_NAME}}:latest
+            ${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ env.IMAGE_NAME }}:${{ github.sha }}
+            ${{ env.REGISTRY }}/${{ env.OWNER_LC }}/${{ env.IMAGE_NAME}}:latest
           platforms: linux/amd64,linux/arm64
